# external

./: CMakeLists.txt  README.md
catch/: CMakeLists.txt
cmake/: Findcppkafka.cmake  Findfmt.cmake  Findlibevent.cmake  Findlibevhtp.cmake  Findnlohmann.cmake  Findoniguruma.cmake  Findrdkafka.cmake  Findsnappy.cmake  Findunivalue.cmake  Finduwebsockets.cmake  Versions.cmake
cppkafka/: 0001-Added-sasl2-dependency.patch  CMakeLists.txt
docker/: Dockerfile
fmt/: CMakeLists.txt
libevent/: CMakeLists.txt
libevhtp/: CMakeLists.txt  Find_config.patch  Find_libevent.patch
nlohmann/: CMakeLists.txt
oniguruma/: CMakeLists.txt
rdkafka/: CMakeLists.txt
snappy/: CMakeLists.txt
spdlog/: 0001-custom-log-helpers.patch  CMakeLists.txt
src/: CMakeLists.txt  dummy.cpp
univalue/: CMakeLists.txt
uwebsockets/: CMakeLists.txt
